fix footer styling for proper alignment

--- a/frontend/src/components/Footer/index.css
+++ b/frontend/src/components/Footer/index.css
@@ -1,15 +1,15 @@
 footer {
-    position: absolute;
+    /* position: absolute;
     bottom: 0;
     left: 0;
-    right: 0;
+    right: 0; */
     background-color: #3D3E50;
     color: white;
     text-align: center;
     padding: 1.5rem;
 }
-
+/* 
 #root {
     position: relative;
     height: 100%;
-}
+} */
